fix(checkm8): add newlines

--- a/checkm8/static/marketing.html
+++ b/checkm8/static/marketing.html
@@ -36,7 +36,8 @@ Free shipping.
       <div id="spinner" class="w-12 h-12 outline hidden animate-spin"></div>
 
       <h1 class="text-xl">Model answer:</h1>
-      <pre class="w-full bg-blue-200 p-4 min-h-[200px]"></pre>
+      <a href="##" class="hover:underline" id="download">Download [not ready yet]</a>
+      <div id="pre" class="w-full bg-blue-200 p-4 min-h-[200px] font-mono"></div>
     </div>
   </body>
 </html>
