--- a/checkm8/static/language.html
+++ b/checkm8/static/language.html
@@ -1,19 +1,41 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="./language.js"></script>
     <title>Checkm8 | chat</title>
   </head>
-  <body class="w-screen bg-blue-100 h-content flex flex-row pb-16 mb-16 accent-blue-600">
+  <body
+    class="w-screen bg-blue-100 h-content flex flex-row pb-16 mb-16 accent-blue-600"
+  >
     <div id="nav" class="flex flex-col w-[50px] p-8 gap-4">
-      <a href="./chat.html" class="w-12 h-12 bg-blue-300 rounded-sm grid place-content-center">C</a>
-      <a href="./language.html" class="w-12 h-12 bg-blue-600 rounded-sm grid place-content-center">L</a>
-      <a href="./sentiment.html" class="w-12 h-12 bg-blue-300 rounded-sm grid place-content-center">S</a>
-      <a href="./marketing.html" class="w-12 h-12 bg-blue-300 rounded-sm grid place-content-center">M</a>
-      <a href="./custom.html" class="w-12 h-12 bg-blue-300 rounded-sm grid place-content-center">W</a>
+      <a
+        href="./chat.html"
+        class="w-12 h-12 bg-blue-300 rounded-sm grid place-content-center"
+        >C</a
+      >
+      <a
+        href="./language.html"
+        class="w-12 h-12 bg-blue-600 rounded-sm grid place-content-center"
+        >L</a
+      >
+      <a
+        href="./sentiment.html"
+        class="w-12 h-12 bg-blue-300 rounded-sm grid place-content-center"
+        >S</a
+      >
+      <a
+        href="./marketing.html"
+        class="w-12 h-12 bg-blue-300 rounded-sm grid place-content-center"
+        >M</a
+      >
+      <a
+        href="./custom.html"
+        class="w-12 h-12 bg-blue-300 rounded-sm grid place-content-center"
+        >W</a
+      >
     </div>
     <div id="main" class="flex flex-col w-[80%] p-8 gap-4">
       <h1 class="text-xl">Language processing (corelations)</h1>
