--- a/checkm8/static/marketing.html
+++ b/checkm8/static/marketing.html
@@ -1,43 +1,76 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="./marketing.js"></script>
     <title>Checkm8 | chat</title>
   </head>
-  <body class="w-screen bg-blue-100 h-content flex flex-row pb-16 mb-16 accent-blue-600">
+  <body
+    class="w-screen bg-blue-100 h-content flex flex-row pb-16 mb-16 accent-blue-600"
+  >
     <div id="nav" class="flex flex-col w-[50px] p-8 gap-4">
-      <a href="./chat.html" class="w-12 h-12 bg-blue-300 rounded-sm grid place-content-center">C</a>
-      <a href="./language.html" class="w-12 h-12 bg-blue-300 rounded-sm grid place-content-center">L</a>
-      <a href="./sentiment.html" class="w-12 h-12 bg-blue-300 rounded-sm grid place-content-center">S</a>
-      <a href="./marketing.html" class="w-12 h-12 bg-blue-600 rounded-sm grid place-content-center">M</a>
-      <a href="./custom.html" class="w-12 h-12 bg-blue-300 rounded-sm grid place-content-center">W</a>
+      <a
+        href="./chat.html"
+        class="w-12 h-12 bg-blue-300 rounded-sm grid place-content-center"
+        >C</a
+      >
+      <a
+        href="./language.html"
+        class="w-12 h-12 bg-blue-300 rounded-sm grid place-content-center"
+        >L</a
+      >
+      <a
+        href="./sentiment.html"
+        class="w-12 h-12 bg-blue-300 rounded-sm grid place-content-center"
+        >S</a
+      >
+      <a
+        href="./marketing.html"
+        class="w-12 h-12 bg-blue-600 rounded-sm grid place-content-center"
+        >M</a
+      >
+      <a
+        href="./custom.html"
+        class="w-12 h-12 bg-blue-300 rounded-sm grid place-content-center"
+        >W</a
+      >
     </div>
     <div id="main" class="flex flex-col w-[80%] p-8 gap-4">
       <h1 class="text-xl">Marketing integration</h1>
       <h2 class="text-md mt-4">What product are we selling?</h2>
-      <input id="product" class="p-2 font-lg max-w-[500px]" value="Sadness">
+      <input id="product" class="p-2 font-lg max-w-[500px]" value="Sadness" />
       <h2 class="text-md mt-4">Write something more about it</h2>
       <textarea id="info" class="p-2 font-lg max-w-[500px] h-[200px]">
 Very large quantity.
 Free shipping.
-</textarea>
+</textarea
+      >
       <h2 class="text-md mt-4">What style/tone should we use</h2>
-      <textarea id="style" class="p-2 font-lg max-w-[500px] h-[200px]">sad, poetic</textarea>
-      <h2 class="text-md mt-4">What campaign items should we make (newline-separated list)</h2>
+      <textarea id="style" class="p-2 font-lg max-w-[500px] h-[200px]">
+sad, poetic</textarea
+      >
+      <h2 class="text-md mt-4">
+        What campaign items should we make (newline-separated list)
+      </h2>
       <textarea id="items" class="p-2 font-lg max-w-[500px] h-[200px]">
 - HTML5/TailwindCSS webpage
 - advertising leaflet
 - script for video ad
-</textarea>
+</textarea
+      >
       <button id="send" class="w-24 h-10 bg-blue-500">Evaluate</button>
       <div id="spinner" class="w-12 h-12 outline hidden animate-spin"></div>
 
       <h1 class="text-xl">Model answer:</h1>
-      <a href="##" class="hover:underline" id="download">Download [not ready yet]</a>
-      <div id="pre" class="w-full bg-blue-200 p-4 min-h-[200px] font-mono"></div>
+      <a href="##" class="hover:underline" id="download"
+        >Download [not ready yet]</a
+      >
+      <div
+        id="pre"
+        class="w-full bg-blue-200 p-4 min-h-[200px] font-mono"
+      ></div>
     </div>
   </body>
 </html>
