doc(checkm8): updated docs for stupid people

--- a/checkm8/static/CSL_doc.html
+++ b/checkm8/static/CSL_doc.html
@@ -58,7 +58,8 @@
 # syntax := symbols ]= are # alowed $
       </pre>
 
-      Set variables with := (CSL is not strongly typed, and constants don't exist)
+      Set variables with := (CSL is not strongly typed, and constants don't
+      exist)
       <pre id="pre" class="w-full bg-blue-200 p-4 min-h-[200px] font-mono mb-4">
 myVar:=some value
 myvar:=CSL is case sensitive
@@ -81,7 +82,8 @@ SOME_$$VARNAME_value:=$SOMETHING2
 uselessVAR:=This var includes the literal string $NONEXISTENTVAR, since it is not a variable
 
 my_OUTPut_variable:=The last declared variable is the output of the whole script
-</pre>
+</pre
+      >
       Run prompts with ]=
       <pre id="pre" class="w-full bg-blue-200 p-4 min-h-[200px] font-mono mb-4">
 # user data
@@ -100,8 +102,8 @@ someOtherValue]=Improve this HTML5 webpage in terms of syntax correctness\n```\n
 
 
 Output:=The webpage is:\n```\n$myValue\n```\n\nImproved webpage\n```\n$someOtherValue\n```
-</pre>
-
+</pre
+      >
     </div>
   </body>
 </html>
